add register log in - out for all users

--- a/hospital/templates/hospital/admin_dashboard.html
+++ b/hospital/templates/hospital/admin_dashboard.html
@@ -1,6 +1,7 @@
 {% block content %}
     {% if user.is_authenticated %}
         Hello, {{ user.username }}.
+        <a href="{% url 'hospital:logout' %}">Log out</a>
     {% else %}
         <a href="{% url 'hospital:admin_signup_view' %}">Sign up</a>
     {% endif %}
