--- a/hospital/templates/hospital/admin_signup.html
+++ b/hospital/templates/hospital/admin_signup.html
@@ -4,6 +4,6 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button name="submit">register</button>
-        <input type="hidden" name="next" value="{% url 'hospital:admin_home_view' %}" />
+        <input type="hidden" name="next" value="{% url 'hospital:admin_dashboard_view' %}" />
     </form>
 {% endblock content %}
