--- a/hospital/templates/hospital/patient_click.html
+++ b/hospital/templates/hospital/patient_click.html
@@ -1,2 +1,4 @@
 {% block content %}
+    <a href="{% url 'hospital:patient_signup_view' %}">Sign up</a>
+    <a href="{% url 'hospital:patient_login' %}">log in</a>
 {% endblock content %}
