--- a/hospital/templates/hospital/admin_login.html
+++ b/hospital/templates/hospital/admin_login.html
@@ -7,6 +7,6 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button name="submit">log in</button>
-        <input type="hidden" name="next" value="{% url 'hospital:admin_home_view' %}" />
+        <input type="hidden" name="next" value="{% url 'hospital:after_login_view' %}" />
 </form>
 {% endblock content %}
