--- a/hospital/templates/hospital/patient_login.html
+++ b/hospital/templates/hospital/patient_login.html
@@ -3,7 +3,7 @@
 {% if form.errors %}
     <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
-    <form method="post" action="{% url 'hospital:doctor_login' %}">
+    <form method="post" action="{% url 'hospital:patient_login' %}">
         {% csrf_token %}
         {{ form.as_p }}
         <button name="submit">log in</button>
