--- a/hospital/templates/hospital/patient_signup.html
+++ b/hospital/templates/hospital/patient_signup.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Doctor Sign Up</title>
+  <title>Patient Sign Up</title>
 
 </head>
 
@@ -20,13 +20,13 @@
 
 
 
-  <!--- signup page for doctor by admin(sumit)  ---------->
+  <!--- signup page for patient by admin(sumit)  ---------->
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="container register-form">
       <div class="form">
-        <div>
-          <p>Register In Hospital</p>
+        <div class="note">
+          <p>Register to Hospital</p>
         </div>
 
         <div>
@@ -39,12 +39,14 @@
                 {% render_field userForm.username  placeholder="Username" %}
               </div>
               <div class="form-group">
-                {% render_field doctorForm.department  placeholder="Department" %}
+                {% render_field patientForm.address  placeholder="Address" %}
               </div>
               <div class="form-group">
-                {% render_field doctorForm.address  placeholder="Address" %}
+                {% render_field patientForm.symptoms  placeholder="Symptoms" %}
               </div>
-
+              <div class="form-group">
+                {% render_field patientForm.profile_pic required="required"  placeholder="Profile Picture" %}
+              </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
@@ -54,21 +56,20 @@
                 {% render_field userForm.password  placeholder="Password" %}
               </div>
               <div class="form-group">
-                {% render_field doctorForm.mobile   placeholder="Mobile" %}
+                {% render_field patientForm.mobile placeholder="Mobile Number" %}
               </div>
               <div class="form-group">
-                {% render_field doctorForm.profile_pic required="required"  placeholder="Profile Picture" %}
+                {% render_field patientForm.assignedDoctorId  placeholder="Doctor" %}
               </div>
 
             </div>
           </div>
           <button type="submit">Register</button>
-          <div class="text-center">Already have an account? <a href="doctor_login">Login here</a></div>
+          <div class="text-center">Already have an account? <a href="patient_login">Login here</a></div>
         </div>
       </div>
     </div>
 
   </form>
 </body>
-
 </html>
