--- a/hospital/templates/hospital/admin_click.html
+++ b/hospital/templates/hospital/admin_click.html
@@ -1,3 +1,4 @@
+{% extends 'hospital/navbar.html' %}
 {% block content %}
     <a href="{% url 'hospital:admin_signup_view' %}">Sign up</a>
     <a href="{% url 'hospital:admin_login' %}">log in</a>
