--- a/hospital/templates/hospital/doctor_login.html
+++ b/hospital/templates/hospital/doctor_login.html
@@ -1,12 +1,14 @@
+{% extends 'hospital/navbar.html' %}
+
 {% block content %}
 
-{% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+    {% if form.errors %}
+        <p>Your username and password didn't match. Please try again.</p>
+    {% endif %}
     <form method="post" action="{% url 'hospital:doctor_login' %}">
         {% csrf_token %}
         {{ form.as_p }}
         <button name="submit">log in</button>
         <input type="hidden" name="next" value="{% url 'hospital:after_login_view' %}" />
-</form>
+    </form>
 {% endblock content %}
